--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
     background-size: cover;
     background-position: center;
     height: 100vh;
-    background-image: url(../assets/img/home.jpg);
+    background-image: url(../img/home.jpg);
     background-color: rgba(0, 0, 0, 0.5);
     background-blend-mode: darken;
 }
